// =============================================================
// erd.dbml
// save-point - PostgreSQL 15+ schema
// dbdiagram.io / dbml-cli 용
// 참고: ULID PK(varchar 26)는 백엔드 생성, BIGINT PK는 IDENTITY(increment)
// =============================================================

// ---------- ENUM 정의 ----------
enum user_role {
  USER
  ADMIN
  SUPER_ADMIN
}

enum user_ban {
  BAN
  UNBAN
}

enum document_status {
  INITIAL
  PROCESSING
  DONE
  PENDING
  APPROVED
  REJECTED
  FAILED
}

enum document_access {
  PUBLIC
  PRIVATE
}

enum category {
  SCRIPTING
  RENDERING
  EDITOR
  PHYSICS
  MATH
  UI
  XR
  ANIMATION
  INPUT
  PERFORMANCE
  AUDIO
  NETWORKING
  OTHER
}

# 아래내용은 프론트 적용하고 나서 지울 예정!
# - scripting : 스크립팅
# - rendering : 렌더링
# - editor : 에디터
# - physics : 물리
# - math : 수학
# - ui : UI
# - xr : XR
# - animation : 애니메이션
# - input : 입력
# - performance : 성능/최적화
# - audio : 오디오
# - networking : 네트워킹

enum ocr_status {
  PENDING
  DONE
  FAILED
}

enum ocr_engine {
  NATIVE
  PADDLE
  SURYA
}

enum job_type {
  OCR
  CLASSIFY_SUMMARIZE
  EMBED
}

enum job_status {
  QUEUED
  RUNNING
  DONE
  FAILED
  RETRYING
}

enum approval_action {
  APPROVED
  REJECTED
}

enum chat_role {
  USER
  ASSISTANT
}

enum notification_type {
  ROLE_PROMOTED
  ROLE_DEMOTED
  DOCUMENT_APPROVED
  DOCUMENT_REJECTED
}

// ---------- 테이블 정의 ----------
Table users {
  id                varchar(26)   [pk]
  password          varchar(255)  [not null]
  role              user_role     [not null, default: 'USER', note: '회원 역할(권한 구분)']
  email             varchar(255)  [not null, unique]
  name              varchar(100)  [not null]
  user_id           varchar(255)  [not null, unique]
  ban               user_ban      [not null, default: 'UNBAN', note: '회원 계정 상태(계정 상태 구분)']
  is_active         boolean       [not null, default: true, note: '회원 접속 상태(접속 여부 구분)']
  last_active_at    timestamptz
  upload_file_count int           [not null, default: 0, note: '업로드한 문서 갯수']
  ask_count         int           [not null, default: 0, note: '챗봇 질문 수']
  img_url           varchar(512)  [default: 'user_image.png']
  ip                varchar(45)
  created_at        timestamptz   [default: `now()`]
  updated_at        timestamptz   [default: `now()`]
}

Table user_role_log {
  id                  bigint      [pk, increment]
  target_user_id      varchar(26)
  changed_by_user_id  varchar(26) [not null]
  before_role         user_role   [not null]
  after_role          user_role   [not null]
  reason              text
  created_at          timestamptz [default: `now()`]
}

Table user_ban_log {
  id                  bigint      [pk, increment, note: '계정 정지·해제 이력']
  target_user_id      varchar(26) [note: '대상 유저 (탈퇴 시 NULL)']
  changed_by_user_id  varchar(26) [not null, note: '변경한 유저']
  before_ban          user_ban    [not null, note: '변경 전 BAN 상태']
  after_ban           user_ban    [not null, note: '변경 후 BAN 상태']
  reason              text        [note: '정지·해제 사유']
  created_at          timestamptz [default: `now()`]

  indexes {
    target_user_id [name: 'idx_ban_log_target']
  }
}

Table user_oauth_accounts {
  id               int          [pk, increment]
  user_id          varchar(26)  [not null]
  provider         varchar(20)  [not null, note: 'google | kakao | naver']
  provider_user_id varchar(255) [not null, note: '소셜 플랫폼이 부여한 고유 ID']
  email            varchar(255) [note: '소셜 계정 이메일(없을 수 있음)']
  created_at       timestamptz  [default: `now()`]

  indexes {
    (provider, provider_user_id) [unique, name: 'uq_provider_user']
  }
}

Table documents {
  id              varchar(26)     [pk, note: 'ULID, 백엔드 생성']
  filename        varchar(255)
  extension       varchar(255)
  file_size       bigint
  status          document_status [not null, default: 'INITIAL']
  access_type     document_access [not null, default: 'PRIVATE']
  uploaded_by_id  varchar(26)     [not null]
  approved_by_id  varchar(26)
  deleted_by_id   varchar(26)     [default: null]
  deleted_at      timestamptz     [default: null]
  approved_at     timestamptz
  created_at      timestamptz     [not null, default: `now()`]
  updated_at      timestamptz     [not null, default: `now()`, note: '업로드, 마지막으로 문서 수정한 시간']

  indexes {
    status         [name: 'idx_documents_status']
    uploaded_by_id [name: 'idx_document_uploaded_by']
  }
}

Table ocr_results {
  id               bigint      [pk, increment]
  document_id      varchar(26) [not null, unique]
  raw_text         text
  total_pages      int
  confidence_score float       [note: '0.0 ~ 1.0']
  ocr_engine       ocr_engine  [not null, default: 'PADDLE']
  status           ocr_status  [not null, default: 'PENDING']
  error_message    text
  processed_at     timestamptz [not null, default: `now()`]
}

Table summary_llm_results {
  id             bigint       [pk, increment]
  document_id    varchar(26)  [not null, unique, note: 'ULID']
  category       category     [note: '카테고리']
  summary_ko     text
  model_name     varchar(100)
  model_version  varchar(50)
  processed_at   timestamptz

  indexes {
    category [name: 'idx_document_category']
  }
}

Table document_chunks {
  id              bigint      [pk, increment]
  document_id     varchar(26) [not null]
  chunk_index     int         [not null]
  chunk_text_en   text        [not null, note: '청크 원문(영어)']
  token_count     int         [note: '토큰 수 (임베딩 모델 기준)']
  page_number     int         [note: '출처 페이지 번호']
  vector_point_id varchar(36) [unique]
  is_indexed      boolean     [not null, default: false]
  indexed_at      timestamptz

  indexes {
    document_id [name: 'idx_chunks_document_id']
    is_indexed  [name: 'idx_chunks_not_indexed (partial: WHERE is_indexed = FALSE)']
  }
}

Table processing_jobs {
  id             bigint      [pk, increment]
  document_id    varchar(26) [not null]
  job_type       job_type    [not null]
  job_status     job_status  [not null, default: 'QUEUED']
  attempt_count  int         [not null, default: 0]
  error_message  text        [note: '마지막 실패 원인']
  queued_at      timestamptz [not null, default: `now()`]
  started_at     timestamptz
  finished_at    timestamptz

  indexes {
    document_id [name: 'idx_jobs_document_id']
    job_type    [name: 'idx_jobs_type']
    job_status  [name: 'idx_jobs_status']
  }
}

Table chat_sessions {
  id             varchar(26)  [pk, note: 'ULID']
  user_id        varchar(26)  [not null]
  session_name   varchar(200)
  last_active_at timestamptz  [not null, default: `now()`]
  created_at     timestamptz  [not null, default: `now()`]

  indexes {
    user_id [name: 'idx_chat_sessions_user']
  }
}

Table chat_message {
  id                  varchar(26)  [pk, note: 'ULID']
  session_id          varchar(26)  [not null]
  role                chat_role    [not null]
  content_ko          text         [not null, note: '한국어 (사용자 질문 or AI 답변)']
  retrieved_chunk_ids jsonb
  model_name          varchar(100)
  latency_ms          int
  created_at          timestamptz  [not null, default: `now()`]

  indexes {
    session_id [name: 'idx_messages_session']
  }
}

Table approval_logs {
  id           bigint          [pk, increment]
  document_id  varchar(26)
  actor_id     varchar(26)
  action       approval_action [not null]
  reason       text
  created_at   timestamptz     [not null, default: `now()`]

  indexes {
    document_id [name: 'idx_approval_document_id']
  }
}

Table pinned_documents {
  user_id      varchar(26)  [not null]
  document_id  varchar(26)  [not null]
  pin_order    int          [not null, default: 0, note: '고정 순서 조정용']
  created_at   timestamptz  [not null, default: `now()`]

  indexes {
    (user_id, document_id) [pk]
  }
}

Table bookmarked_documents {
  user_id      varchar(26)  [not null]
  document_id  varchar(26)  [not null]
  created_at   timestamptz  [not null, default: `now()`]

  indexes {
    (user_id, document_id) [pk]
  }
}

Table notifications {
  id         varchar(26)       [pk, note: 'ULID, 백엔드 생성']
  user_id    varchar(26)       [not null, note: '알림 수신자']
  type       notification_type [not null]
  ref_id     bigint            [not null, note: '연관 로그 PK (ROLE_* → user_role_log.id, DOCUMENT_* → approval_logs.id) / 폴리모픽이라 물리 FK 없음']
  message    text              [not null, note: '프론트 노출 메시지 (백엔드 생성)']
  is_read    boolean           [not null, default: false]
  read_at    timestamptz
  created_at timestamptz       [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'idx_notifications_user_unread (partial: WHERE is_read = FALSE)']
  }
}

// ---------- 관계(FK) 정의 ----------
// user_role_log
Ref: user_role_log.target_user_id     > users.id [delete: set null]
Ref: user_role_log.changed_by_user_id > users.id [delete: no action]

// user_ban_log
Ref: user_ban_log.target_user_id     > users.id [delete: set null]
Ref: user_ban_log.changed_by_user_id > users.id [delete: no action]

// user_oauth_accounts
Ref: user_oauth_accounts.user_id > users.id [delete: cascade]

// documents
Ref: documents.uploaded_by_id > users.id [delete: no action]
Ref: documents.approved_by_id > users.id [delete: set null]
Ref: documents.deleted_by_id  > users.id [delete: no action]

// ocr_results / summary / chunks / jobs (document 1:N or 1:1)
Ref: ocr_results.document_id          - documents.id [delete: cascade]  // UNIQUE → 1:1
Ref: summary_llm_results.document_id  - documents.id [delete: cascade]  // UNIQUE → 1:1
Ref: document_chunks.document_id      > documents.id [delete: cascade]
Ref: processing_jobs.document_id      > documents.id [delete: cascade]

// chat
Ref: chat_sessions.user_id    > users.id         [delete: cascade]
Ref: chat_message.session_id  > chat_sessions.id [delete: cascade]

// approval_logs
Ref: approval_logs.document_id > documents.id [delete: set null]
Ref: approval_logs.actor_id    > users.id     [delete: set null]

// pinned / bookmarked (N:M 브릿지)
Ref: pinned_documents.user_id        > users.id     [delete: cascade]
Ref: pinned_documents.document_id    > documents.id [delete: cascade]
Ref: bookmarked_documents.user_id    > users.id     [delete: cascade]
Ref: bookmarked_documents.document_id > documents.id [delete: cascade]

// notifications
Ref: notifications.user_id > users.id [delete: cascade]
